--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Blog global settings
-header-img:  # header-img.png 
-email: 390517426@qq.com # your email
+header-img: https://cdn.wonderfulengineering.com/wp-content/uploads/2014/06/galaxy-wallpapers-10.jpg # header-img.png 
+email: a390517426@gmail.com # your email
 keyword:  # your keywords
 
 # Navigator of blog
@@ -28,6 +28,7 @@ github_username: unnamed42
 twitter_username: 
 facebook_username: 
 linkedin_username: 
+steam_id: # something after your steamcommunity.com/id/
 
 # Sidebar settings
 sidebar: true
@@ -70,7 +71,7 @@ clip-post: "?" # you can custom post width and height
 clip-home-post-bg: "?imageView2/1/w/800/h/300/interlace/1/q/70"
 
 # post default images
-post-default-img: 
+post-default-img: https://www.nasa.gov/sites/default/files/images/582752main_sunrise_from_iss-full_full.jpg
 
 # If you want to show word count, set to true
 # This function requires hexo-wordcount
@@ -78,6 +79,9 @@ word_count: true
 
 # Set the length of preview text
 preview_length: 150
+
+# Set to false if you don't want excerpt in your articles
+show_excerpt: true
 
 # Featured tag settings
 featured-tags: true
