--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ nav:
   - name: 归档
     url: archives/index.html
     icon: fa-archive
+  - name: 标签
+    url: tags/index.html
+    icon: fa-tags
   - name: 留言板
     url: guestbook/index.html
     icon: fa-comment
