--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ clip-post: "?" # you can custom post width and height
 clip-home-post-bg: "?imageView2/1/w/800/h/300/interlace/1/q/70"
 
 # post default images
-post-default-img: https://www.nasa.gov/sites/default/files/images/582752main_sunrise_from_iss-full_full.jpg
+post-default-img: /img/background.jpg
 
 # If you want to show word count, set to true
 # This function requires hexo-wordcount
